# ChangeLog for games-puzzle/galaxis
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/galaxis/ChangeLog,v 1.9 2006/12/06 17:24:33 wolf31o2 Exp $

  06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> galaxis-1.7.ebuild:
  Removed sed-4 from *DEPEND.

  15 Aug 2006; Thomas Cort <tcort@gentoo.org> galaxis-1.7.ebuild:
  Stable on amd64 wrt Bug #143961

  16 Apr 2005; Yuta SATOH <nigoro@gentoo.org> galaxis-1.7.ebuild:
  Stable on ppc64

  30 Dec 2004; Yuta SATOH <nigoro@gentoo.org> galaxis-1.7.ebuild:
  added ~ppc64

  22 Nov 2004; Joseph Jezak <josejx@gentoo.org> galaxis-1.7.ebuild:
  Marked ppc stable.

  11 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> galaxis-1.7.ebuild:
  Added ~amd64 KEYWORD and closing bug #69657.

  08 Jun 2004; David Holm <dholm@gentoo.org> galaxis-1.7.ebuild:
  Added to ~ppc.

*galaxis-1.7 (06 Jun 2004)

  06 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> galaxis-1.7.ebuild,
  metadata.xml:
  initial commit - ebuild submitted by Alexandru Toma via bug #48245
