@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/galaxis
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/galaxis/ChangeLog,v 1.9 2006/12/06 17:24:33 wolf31o2 Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/galaxis/ChangeLog,v 1.10 2009/01/29 02:10:20 mr_bones_ Exp $
+
+  29 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org> galaxis-1.7.ebuild:
+  EAPI=2; respect CC
 
   06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> galaxis-1.7.ebuild:
   Removed sed-4 from *DEPEND.
